--- a/src/assets/styles/common/mixins.scss
+++ b/src/assets/styles/common/mixins.scss
@@ -45,3 +45,51 @@
     border-radius: 4px;
   }
 }
+
+@mixin border {
+  position: relative;
+
+  &::after {
+    content: " ";
+    transform: scale(0.5);
+    position: absolute;
+    border: 2px solid #ff5f16;
+    top: -50%;
+    right: -50%;
+    bottom: -50%;
+    left: -50%;
+    border-radius: 4px;
+  }
+}
+
+@mixin border-around {
+  position: relative;
+
+  &::after {
+    content: " ";
+    transform: scale(.5);
+    position: absolute;
+    border: 1px solid #ffb232;
+    top: -50%;
+    right: -50%;
+    bottom: -50%;
+    left: -50%;
+    border-radius: 1px;
+  }
+}
+
+@mixin border-small {
+  position: relative;
+
+  &::after {
+    content: " ";
+    transform: scale(.5);
+    position: absolute;
+    border: 1px solid #ff5f16;
+    top: -50%;
+    right: -50%;
+    bottom: -50%;
+    left: -50%;
+    border-radius: 4px;
+  }
+}
